material ui and react experimentation

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 <body>
 	<p>index</p>
 	<div id="react_container"></div>
+	<div id="root"></div>
 
 
 	<!-- Load React. -->
@@ -16,5 +17,6 @@
 
 	<!-- Load our React component. -->
 	<script src="reactTest.js"></script>
+	<script src="function_test.js"></script>
 </body>
 </html>
